k8s/istio/03-gateways/6-istio-rules.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-virtual-service
  namespace: default
spec:
  hosts:
    - fleetman-webapp.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: fleetman-webapp.default.svc.cluster.local
            subset: fleetman-webapp-original
          weight: 90
        - destination:
            host: fleetman-webapp.default.svc.cluster.local
            subset: fleetman-webapp-experimental
          weight: 10

---

kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-destination-rules
  namespace: default
spec:
  host: fleetman-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: fleetman-webapp-original
    - labels:
        version: experimental
      name: fleetman-webapp-experimental
