k8s/istio/03-gateways/9-istio-rules-with-headers.yaml
---
# This gateway object confgures istio to listen to port 80 from external sources and forward traffic into the cluster.
# If the gateway is exposed via nodeport on the istio-ingressgateway service in istio-namespace,
# then that node port is being forwarded to port 80 on the ingressgateway service and from the ingressgateway
# service in the istio namespace to the pods with label istio=ingressgateway.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fleetman-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation. This selector essentially targets the pods with label istio=ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # In production ofcourse you would want a specific domain name instead of an asterix.

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-virtual-service
  namespace: default
spec:
  hosts:
    # - fleetman-webapp.default.svc.cluster.local # This is to route traffic internal to the cluster. Since the domain for external traffic is asterix we are commenting out this line for our specific usecase.
    - "*" # This is for external traffic. In production this will be the same domain names as specified in the gateway configuration above. However with a asterix you can avoid the domain above
  gateways: # The association of this virtual service with the ingressgateway is necessary because these rules need to be applied for traffic from external sources
    - fleetman-gateway
  http:
    - match:
      - headers:
          x-app-version:
            exact: canary
      route:
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: fleetman-webapp-experimental

    # This is a CATCH ALL for requests that do not have the header x-app-version
    - route:
      - destination:
          host: fleetman-webapp.default.svc.cluster.local
          subset: fleetman-webapp-original

---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-webapp-destination-rules
  namespace: default
spec:
  host: fleetman-webapp.default.svc.cluster.local
  subsets:
    - labels:
        version: original
      name: fleetman-webapp-original
    - labels:
        version: experimental
      name: fleetman-webapp-experimental

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-virtual-service
  namespace: default
spec:
  hosts:
    - fleetman-staff-service.default.svc.cluster.local
  http:
    - match:
      - headers:
          x-app-version:
            exact: canary
      # For the engineers who are testing the canary version of the software, we are introducing a fault
      # by injecting a fixed delay into the network calls.
      # The non-canary requests are not affected by this.
      fault:
        delay:
          percentage:
            value: 100.0
          fixedDelay: 5s
      route:
      - destination:
          host: fleetman-staff-service.default.svc.cluster.local
          subset: fleetman-staff-service-risky

    - route: # CATCH ALL
        - destination:
            host: fleetman-staff-service.default.svc.cluster.local
            subset: fleetman-staff-service-safe

---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-staff-destination-rules
  namespace: default
spec:
  host: fleetman-staff-service.default.svc.cluster.local
  subsets:
    - labels:
        version: safe
      name: fleetman-staff-service-safe
    - labels:
        version: risky
      name: fleetman-staff-service-risky

---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: fleetman-vehicle-telemetry-vs
  namespace: default
spec:
  hosts:
    - fleetman-vehicle-telemetry.default.svc.cluster.local
  http:
    - fault:
        abort:
          httpStatus: 503
          percentage:
            value: 20
      route:
        - destination:
            host: fleetman-vehicle-telemetry.default.svc.cluster.local
